# deepfunding-prediction

./: .gitignore  DL.ipynb  LGB-emb-only.ipynb  LGB-with-emb.ipynb  LGB.ipynb  README.md  RF-emb-only.ipynb  RF.ipynb  RL.ipynb  data-prep-add.ipynb  data-prep-time-weighted.ipynb  data-prep-time.ipynb  data-prep.ipynb  data-prep.py  emb_from_llm.ipynb  embedding-prep.ipynb  explore.ipynb  graph.ipynb  pyproject.toml  test_v_index.py  train.py  try-cosine.ipynb  v-index.ipynb  visualize.ipynb
data/: dependent-metrics.csv  repo_metrics_and_metadata.parquet  unweighted_graph.json
part-1/: train.csv
